# REPAR

./: .env.development  .env.production  .env.template  .gitignore  .replit  BLOCKCHAIN_BUILD_FINAL_FIX.md  BLOCKCHAIN_BUILD_FIX.md  BLOCKCHAIN_BUILD_FIXED.md  BLOCKCHAIN_DEPLOYMENT.md  DEPLOYMENT_README.md  FIX_GITHUB_ACTIONS_BUILD.md  GENESIS_LAUNCH_GUIDE.md  GITHUB_ACTIONS_BUILD_GUIDE.md  IMPORT_COMPLETE.md  LICENSE-CODE.md  LICENSE-RESEARCH.md  LICENSE.md  NOTICE.md  PRE_LAUNCH_CHECKLIST.md  PRE_LAUNCH_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_START_BUILD.md  README.md  TRIGGER_BLOCKCHAIN_BUILD.md  commit-fixes.sh  deploy-to-digitalocean.sh  diagnostic.sh  docker-compose.yml  genesis-template.json  import-path-fix.sh  package-lock.json  package.json  pyproject.toml  replit.md  trigger-blockchain-build.sh
.github/: DEPLOYMENT.md  GITHUB_PAGES_SETUP.md
aequitas/: BUILD_STATUS.md  DEPLOYMENT_STRATEGY.md  Makefile  README.md  config.yml  go.mod  go.sum  readme.md
attached_assets/: Aequitas_Protocol_Enhanced_1_1761204210196.pptx  Pasted--ABSOLUTELY-LET-S-MAKE-THIS-INTERACTIVE-AND-FIX-THE-TERMINOLOGY-I-can-see-from-your-logs-that-1760759656966_1760759656971.txt  Pasted--ACKNOWLEDGED-ANALYZING-REPLIT-SESSION-HISTORY-AND-CURRENT-STATE-I-can-see-you-ve-been-working-1761330078615_1761330078635.txt  Pasted--Analyzing-and-Fixing-Blockchain-Workflow-for-Aequitas-Protocol-It-s-1-22-PM-EDT-on-Thurs-1761246258709_1761246258722.txt  Pasted--Analyzing-the-Latest-Blockchain-Build-Failure-and-Next-Steps-for-Aequitas-Protocol-It-s--1761258478439_1761258478463.txt  (+107 more)
(+348 files in other folders)
